# rust-backend

./: .env-sample  Cargo.toml
db/: db.sql
src/: main.rs
src/controllers/: characters.rs  mod.rs  tasks.rs  websockets.rs
src/modules/: db.rs
