[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = { version = "0.16.0" }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
