[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0"
sqlx = { version = "0.8.0", features = ["runtime-async-std", "postgres"] }
async-std = { version = "1.12.0", features = ["attributes"] }
